# glitch-grow-ai-social-media-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  brand.config.example.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_brand_id.py  0003_add_platform_auth.py  0004_add_vendor_request_id.py  0005_add_variant_fields.py  0006_text_posts.py  0008_discord_approval.py
brand/audio/: README.md
brand/configs.example/: nmahya.example.json
brand/schema/: brand.config.schema.json
issues/: bug-test-collection-missing-glitch-signal-module.md
ops/nginx/: signal.glitchexecutor.com.conf
ops/systemd/: glitch-signal.service  glitch-social-scout.service  glitch-social-scout.timer
scripts/: bootstrap_platform_auth.py  post_foundation.py  register_upload_post_webhook.py
src/glitch_signal/: config.py  server.py
src/glitch_signal/agent/: graph.py  llm.py  state.py
src/glitch_signal/analytics/: __init__.py  upload_post.py
src/glitch_signal/comments/: strategic.py  sweeper.py  x_sweeper.py
src/glitch_signal/db/: models.py  session.py
src/glitch_signal/discord/: __init__.py  auth.py  formatter.py  rest.py
src/glitch_signal/integrations/: __init__.py  google_drive.py  google_sheets.py  linkedin.py  sheet_tracker.py  x.py
src/glitch_signal/media/: carousel_gen.py  ffmpeg.py  filename_parser.py  (+1 more)
tests/: test_buffer.py  test_dispatch_gate_inflight.py  test_drive_footage_pipeline.py  test_ffmpeg_transforms.py  test_smoke.py  test_tiktok.py  test_upload_post.py  test_upload_post_analytics.py  test_upload_post_webhook.py
(+24 files in other folders)
