[project]
name = "glitch-social-media-agent"
version = "0.1.0"
description = "Glitch Social Media Agent — autonomous video content + ORM agent for Glitch Executor. Mines shipped artifacts, generates short-form video (YouTube Shorts/X/Instagram Reels), and manages brand reputation autonomously."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  # Web / server
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",

  # Agent stack
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "litellm>=1.52",

  # LLM providers
  "anthropic>=0.40",
  "google-genai>=0.3",

  # Database
  "sqlmodel>=0.0.21",
  "alembic>=1.14",
  "asyncpg>=0.30",

  # Video assembly
  "ffmpeg-python>=0.2.0",

  # Telegram
  "python-telegram-bot[rate-limiter,webhooks]>=21.6",

  # Utilities
  "structlog>=24.4",
  "tenacity>=9.0",
  "aiofiles>=24.1",
]

[project.optional-dependencies]
phase2 = [
  "tweepy>=4.14",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.150",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glitch_signal"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
